example_deployment/webapp_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-mediaflipper
  labels:
    app: MediaFlipper
    stack: MediaFlipper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: MediaFlipper
      stack: MediaFlipper
  template:
    metadata:
      name: webapp-mediaflipper
      labels:
        app: MediaFlipper
        stack: MediaFlipper
    spec:
      containers:
        - image: guardianmultimedia/mediaflipper:45
          #imagePullPolicy: Always
          name: webapp-mediaflipper
          resources:
            requests:
              cpu: 0.5
              memory: 0.5Gi
            limits:
              cpu: 2
              memory: 1Gi
          ports:
          - containerPort: 9000
          volumeMounts:
            - mountPath: /mnt/shared-data
              name: shared-data
            - mountPath: /opt/mediaflipper/config
              name: webapp-config
            - mountPath: /opt/mediaflipper/settings
              name: webapp-settings
      restartPolicy: Always
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-mediaflipper
        - name: webapp-config
          configMap:
            name: mediaflipper-webapp-config
        - name: webapp-settings
          configMap:
            name: mediaflipper-webapp-settings
