example_deployment/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    stack: MediaFlipper
  name: redis-mediaflipper
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: redis
    stack: MediaFlipper
