example_deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-mediaflipper
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - mediaflipper-dev.gnm.int
      secretName: mediaflipper-certs
  rules:
  - host: mediaflipper-dev.gnm.int
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-mediaflipper
          servicePort: 9000
